--- a/app/views/updates/show.html.erb
+++ b/app/views/updates/show.html.erb
@@ -3,13 +3,15 @@
 <div class="max-w-3xl mx-auto px-4 sm:px-6 md:flex md:items-center md:justify-between md:space-x-5 lg:max-w-7xl lg:px-8">
   <div class="flex items-center space-x-5">
     <div class="flex-shrink-0">
-      <div class="relative">
+      <%= link_to project_path(@project.slug), class: 'relative' do %>
         <%= image_tag @project.image_avatar_url, class: 'h-16 w-16 rounded-full' %>
         <span class="absolute inset-0 shadow-inner rounded-full" aria-hidden="true"></span>
-      </div>
+      <% end %>
     </div>
     <div>
+      <%= link_to project_path(@project.slug) do %>
       <h1 class="text-4xl font-bold text-gray-900"><%= @project.name %></h1>
+      <% end %>
     </div>
   </div>
   <div class="mt-6 flex flex-col-reverse justify-stretch space-y-4 space-y-reverse sm:flex-row-reverse sm:justify-end sm:space-x-reverse sm:space-y-0 sm:space-x-3 md:mt-0 md:flex-row md:space-x-3">
@@ -43,44 +45,40 @@
 
 <div class="mt-8 max-w-3xl mx-auto grid grid-cols-1 gap-6 sm:px-6 lg:max-w-7xl lg:grid-flow-col-dense lg:grid-cols-3">
   <div class="space-y-6 lg:col-start-1 lg:col-span-2">
-    <!-- Description list-->
-    <section aria-labelledby="applicant-information-title">
+    <section>
       <div class="bg-white shadow sm:rounded-lg">
-        <div class="px-4 py-5 sm:px-6">
-          <h2 id="applicant-information-title" class="text-3xl leading-6 font-bold text-gray-900">
-            Updates
-          </h2>
+        <div class="px-4 py-5 sm:px-6 flex justify-between">
+          <h2 class="text-3xl leading-5 font-bold text-gray-900 inline-flex">
+            <%= @update.title %>
+          </h2> 
+          <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-indigo-100 text-indigo-800 align-top">
+            <%= @update.category %>
+          </span>
         </div>
         <div class="border-t border-gray-200 px-12 py-6 sm:px-6">
           <div class="mt-0 grid gap-16">
             <div>
-              <div>
-                  <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-indigo-100 text-indigo-800">
-                    <%= @update.category %>
-                  </span>
-              </div>
-              <div class="block mt-4">
-                <p class="text-xl font-semibold text-gray-900">
-                  <%= link_to @update.title, project_update_path(@update.project.slug, @update.id) %>
-                </p>
-                <p class="mt-3 text-base text-gray-500">
+              <div class="block mt-2">
+                <p class="text-base text-gray-500">
                   <%= @update.body %>
                 </p>
               </div>
-              <div class="mt-6 flex items-center">
-                <div class="flex-shrink-0">
-                  <%= image_tag @update.project.image_avatar_url, class: 'h-10 w-10 rounded-full' %>
-                </div>
-                <div class="ml-3">
-                  <p class="text-sm font-medium text-gray-900">
-                    <%= @update.project.name %>
-                  </p>
-                  <div class="flex space-x-1 text-sm text-gray-500">
-                    <time datetime="2020-03-16">
-                      <%= @update.publish_at %>
+              <div class="mt-4 flex items-center justify-between">
+                <div class="flex items-center">
+                  <div class="flex text-lg font-bold text-gray-500">
+                    <time>
+                      <%= @update.publish_at.strftime("%a, %b %e, %Y at %l:%M%p") %>
                     </time>
                   </div>
                 </div>
+                <% if @current_wallet and (@current_wallet.managed_projects.where(id: @update.project.id).present? or @current_wallet.admin.present?) %>
+                  <div class="mt-6 flex flex-col-reverse justify-stretch space-y-4 space-y-reverse sm:flex-row-reverse sm:justify-end sm:space-x-reverse sm:space-y-0 sm:space-x-3 md:mt-0 md:flex-row md:space-x-3">
+                    <%= link_to "Edit", edit_update_path(@update), class: 'inline-flex items-center justify-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-100 focus:ring-blue-500' %>
+
+                    <%= button_to "Delete", update_path(@update), method: :delete, data: {confirm: "Are you sure you want to delete this update?" }, class: 'inline-flex items-center justify-center px-4 py-2 border border-red-800 shadow-sm text-sm font-medium rounded-md text-white bg-red-500 hover:bg-red-600 hover:border-red-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-100 focus:ring-red-800' %>
+                  </div>
+                <% end %>
+                
               </div>
             </div>
           </div>
